FIX: Appointments clickable over break block (z-index 4 > 3)

--- a/frontend/src/styles/pages/_agenda.scss
+++ b/frontend/src/styles/pages/_agenda.scss
@@ -1066,7 +1066,7 @@
     position: absolute;
     left: 3px;
     right: 3px;
-    z-index: 2;
+    z-index: 4;
     display: flex;
     flex-direction: column;
     gap: 2px;
